# project-renine

./: .gitignore  README.md  SESSION_HANDOFF.md  pyproject.toml
api/: __init__.py  auth.py  dependencies.py  endpoints.py  models.py  rate_limiting.py  server.py
config/: logging.yaml  memory.yaml  security.yaml  settings.yaml  tools.yaml
docs/: CHANGELOG.md  PHASE_PROGRESS.md  PROJECT_ARCHITECTURE.md  SESSION_HANDOFF.md  SMART_HOME.md  architecture_summary.txt  bugs.txt  changelog.txt  code_map.txt  database_schema.txt  deleted_components.txt  features.txt  folder_structure.txt  lessons_learned.txt  memory_system.txt  models.txt  performance_notes.txt  project_state.txt  session_handoff.txt  technical_debt.txt  tools_registry.txt
docs/memory/: PROJECT PLAN V1.0.md  RENINE_MASTER_PROMPT_V1_0.md
docs/phase_reports/: phase_1_report.txt  phase_2_report.txt  phase_3_report.txt  phase_4_report.txt  phase_5_report.txt  phase_6_report.txt  phase_7_report.md  phase_8_report.md
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/components/: GlassCard.tsx  GlowingButton.tsx  GlowingInput.tsx  ScreenContainer.tsx
mobile/navigation/: AppNavigator.tsx
mobile/screens/: LoginScreen.tsx  MemoryScreen.tsx  PetsScreen.tsx  RemindersScreen.tsx  SmartHomeScreen.tsx
mobile/services/: api.ts  auth.tsx
mobile/theme/: colors.ts
renine/: __init__.py
renine/agents/: __init__.py  base_agent.py  browser_agent.py  coding_agent.py  email_agent.py  file_agent.py  house_agent.py  inventory_agent.py  main_brain_agent.py  memory_agent.py  news_agent.py  pet_agent.py  smart_home_agent.py  spreadsheet_agent.py  vision_agent.py
renine/brain/: __init__.py  external_client.py  ollama_client.py  response_builder.py  router.py
renine/core/: __init__.py  config.py  context_sanitizer.py  events.py  exceptions.py  logging_config.py
renine/databases/: __init__.py  session.py
renine/memory/: __init__.py  expiration.py  layer1_context.py  layer2_history.py  layer3_mind.py  layer4_personality.py  memory_manager.py  retrieval.py
renine/security/: __init__.py  confirmation_gate.py  encryption.py  input_validator.py
renine/tools/: __init__.py  executor.py  permissions.py  registry.py
tests/: __init__.py  conftest.py
(+108 files in other folders)
